--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "HRIDOY AHMED",
-  "short_name": "𝙗𝙆𝙖𝙨𝙝",
+  "name": "বিকাশ সেন্ড মানি সফল",
+  "short_name": "বিকাশ",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#f44336",
+  "theme_color": "#e60073",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://i.postimg.cc/rpjsFzV6/1751012495891.jpg",
+      "src": "https://i.postimg.cc/WzSZ5MLs/1748783430004.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://i.postimg.cc/rpjsFzV6/1751012495891.jpg",
+      "src": "https://i.postimg.cc/WzSZ5MLs/1748783430004.jpg",
       "sizes": "512x512",
       "type": "image/png"
     }
