--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "বিকাশ সেন্ড মানি সফল",
-  "short_name": "বিকাশ",
-  "start_url": "./",
+  "short_name": "Bkash",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#e60073",
@@ -9,12 +9,12 @@
   "icons": [
     {
       "src": "https://i.postimg.cc/WzSZ5MLs/1748783430004.jpg",
-      "sizes": "192x192",
+      "sizes": "512x512",
       "type": "image/png"
     },
     {
       "src": "https://i.postimg.cc/WzSZ5MLs/1748783430004.jpg",
-      "sizes": "512x512",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ]
