--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "বিকাশ সেন্ড মানি সফল",
-  "short_name": "Bkash",
+  "name": "HRIDÕY",
+  "short_name": "𝙗𝙆𝙖𝙨𝙝",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
